mType/tests/testFiles/error/error/nestedInterfaceInClass.mt
class A {
    int x;

    interface D {
        function test(): void;
    }
}
